# flappy_bird

./: Cargo.toml  README.md
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
res/shaders/: font.frag  font.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
res/textures/atlas/: texture.json
src/: main.rs
src/game/: button.rs  defs.rs  main_menu.rs  mod.rs  pipes.rs  playing.rs  scene.rs
src/graphics/: mod.rs
src/graphics/renderer/: atlas.rs  buffer.rs  drawable.rs  fonts.rs  mod.rs  positioning.rs  program.rs  simple_texture.rs  texture.rs  types.rs  uniform.rs  vertex_array_object.rs
src/sounds/: mod.rs
vertex_derive/: Cargo.toml
vertex_derive/src/: lib.rs
